# ca-project-application

./: .gitignore  README.md  distribute_docker_images.sh  docker-compose.yml
app/: .dockerignore  Dockerfile  entrypoint.py  pyproject.toml
app/.streamlit/: config.toml  secrets.toml
app/notebooks/: data.py  emotion_analysis.py  parse.ipynb  topic_modeling.py
app/pages/: analysis.py  chatbot.py  home.py
app/src/: Database.py  analysis.py  prompt.py  rag.py  utils.py
ollama/: Dockerfile  entrypoint.sh
python/: build.sh  requirements.txt  setup.sh
python/src/od_lib/01_preprocessing/: 02_download_raw_data_electoral_term_19_20.py  03_split_xml.py  04_split_xml_electoral_term_1_and_2.py  05_split_xml_electoral_term_19_20.py
python/src/od_lib/02_factions/: 02_add_abbreviations_and_ids.py
python/src/od_lib/04_speech_content/: 01_extract_speeches.py  02_clean_speeches.py  03_match_names_speeches.py
python/src/od_lib/05_electoral_term_19_20/: 01_extract_speeches_and_contributions_electoral_term_19_20.py
python/src/od_lib/06_contributions/: 01_extract_contributions.py  02_clean_contributions_extended.py  03_match_contributions_extended.py
python/src/od_lib/07_database/: 02_upload_data_to_database.py
