[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lucas <development@waetzig.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = ">=1.48.0,<2.0.0"
pandas = ">=2.3.1,<3.0.0"
sqlalchemy = ">=2.0.42,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.30.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
